        due to being (partially) sticked. (Closes: #641473)
      - Removing automatically installed packages: if several automatically
        installed packages satisfy the relation, leave only first of them.
    - system/worker:
      - If the option 'cupt::worker::defer-triggers' is set to 'auto', check
        for recent enough version of dpkg (1.16.1).

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Mon, 05 Dec 2011 11:02:17 +0200

cupt (2.3.3) unstable; urgency=low

  * console:
    - 'tar-metadata': include also Cupt-specific configuration files.
  * lib:
    - system/worker:
      - Generating dpkg package sequence: fixed non-propagating low-level
        subactions to higher-level subgroups in some cases. This regression
        was introduced in 2.2.0~rc1. Thanks to Jonathan Nieder for the report.
        (Closes: #656566)
  * doc:
    - tutorial:
      - Explicitly documented what infrastructure Cupt uses.
  * debian:
    - libcupt2-0.postrm:
      - Remove '/var/lib/cupt' directory completely on 'purge'.
        (Closes: #656457)

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sat, 21 Jan 2012 12:43:56 +0200

cupt (2.3.2) unstable; urgency=low

  * console:
    - 'show', 'showsrc': package name wildcards now work with '--all-versions'.
      (Closes: #651889)
  * lib:
    - cache:
      - Pin preferences: fixed 'origin' pin type support. (Closes: #651890)
      - Pin preferences: print a more user-friently error message when pin
        priority is not a valid integer. (Closes: #651894)
      - Parsing Release files: use 'Version' field when it's present.
        (Closes: #652379)
  * doc:
    - man/cupt.1:
      - Documented the option '--show-not-preferred'. (Closes: #651888)

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Mon, 19 Dec 2011 20:16:26 +0200

cupt (2.3.1) unstable; urgency=low

  * console:
    - Managing packages:
      - 'reinstall': always use and enforce the installed version.
        (Closes: #650214)
  * lib:
    - cache: